--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
   <body>
     <div class="card text-center mb-3 headercard">
       <div class="card-body">
+        <img src="/images/logo.svg" alt="logo" class="logo" />
         <h5 class="card-title">Adela Javorska</h5>
+
         <p class="card-text">
           With supporting text below as a natural lead-in to additional content.
         </p>
