--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <script
+      src="https://kit.fontawesome.com/485edfbfd2.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Exo&family=Lovers+Quarrel&display=swap"
       rel="stylesheet"
@@ -26,13 +30,13 @@
   <body>
     <div class="card text-center mb-3 headercard">
       <div class="card-body">
-        <img src="/images/logo.svg" alt="logo" class="logo" />
         <h5 class="card-title">Adela Javorska</h5>
-
-        <p class="card-text">
-          With supporting text below as a natural lead-in to additional content.
-        </p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <img src="/images/logo.svg" alt="logo" class="logo" />
+        <p class="card-text shortdesc">Front-end developer based in Vienna.</p>
+        <a href="#" class="btn btn-primary">
+          <i class="fa-solid fa-pen-fancy fa-rotate-270 fa-fade"></i> Write me
+          <i class="fa-solid fa-pen-fancy fa-fade"></i
+        ></a>
       </div>
     </div>
   </body>
