--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Exo&family=Lovers+Quarrel&family=Permanent+Marker&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://kit.fontawesome.com/485edfbfd2.js"
       crossorigin="anonymous"
     ></script>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Exo&family=Lovers+Quarrel&display=swap"
-      rel="stylesheet"
-    />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -24,6 +25,10 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Exo&family=Lovers+Quarrel&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/sources/style.css" />
     <title>Document</title>
   </head>
@@ -37,6 +42,32 @@
           <i class="fa-solid fa-pen-fancy fa-rotate-270 fa-fade"></i> Write me
           <i class="fa-solid fa-pen-fancy fa-fade"></i
         ></a>
+      </div>
+    </div>
+
+    <div class="card text-center mb-3 headerprojects">
+      <div class="card-body">
+        <h4 class="card-title">Have a look at my projects</h4>
+      </div>
+    </div>
+
+    <div class="card projectcard">
+      <img
+        src="/images/project1.jpg"
+        class="card-img-top projectimage"
+        alt="weather project"
+      />
+      <div class="card-body">
+        <h5 class="card-title">Weather project</h5>
+        <p class="card-text">
+          Some quick example text to build on the card title and make up the
+          bulk of the card's content.
+        </p>
+      </div>
+
+      <div class="card-body">
+        <a href="#" class="card-link">Card link</a>
+        <a href="#" class="card-link">Another link</a>
       </div>
     </div>
   </body>
