picture on top added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/sources/style.css" />
-    <title>Document</title>
+    <title>Adela Javorska - homepage</title>
   </head>
   <body>
     <div class="card text-center mb-3 headercard">
@@ -38,7 +38,12 @@
         <h5 class="card-title">Adela Javorska</h5>
         <img src="/images/logo.svg" alt="logo" class="logo" />
         <p class="card-text shortdesc">Front-end developer based in Vienna.</p>
-        <a href="#" class="btn btn-primary">
+        <img
+          src="/images/undraw_proud_coder_re_exuy.svg"
+          class="happycoder"
+          alt="happy coder"
+        />
+        <a href="#" class="btn btn-primary button1">
           <i class="fa-solid fa-pen-fancy fa-rotate-270 fa-fade"></i> Write me
           <i class="fa-solid fa-pen-fancy fa-fade"></i
         ></a>
