--- a/index.html
+++ b/index.html
@@ -31,13 +31,20 @@
     />
     <link rel="stylesheet" href="/sources/style.css" />
     <title>Adela Javorska - homepage</title>
+    <meta
+      name="description"
+      content="Homepage of Adela Javorska, a front-end developer, based in Vienna."
+    />
   </head>
   <body>
     <div class="card text-center mb-3 headercard">
       <div class="card-body">
         <h5 class="card-title">Adela Javorska</h5>
         <img src="/images/logo.svg" alt="logo" class="logo" />
-        <p class="card-text shortdesc">Front-end developer based in Vienna.</p>
+        <p class="card-text shortdesc">
+          Front-end developer, <br />
+          based in Vienna.
+        </p>
         <img
           src="/images/undraw_proud_coder_re_exuy.svg"
           class="happycoder"
