--- a/index.html
+++ b/index.html
@@ -57,10 +57,8 @@
       </div>
     </div>
 
-    <div class="card text-center mb-3 headerprojects">
-      <div class="card-body">
-        <h4 class="card-title">Have a look at my projects</h4>
-      </div>
+    <div>
+      <h4 class="headerprojects">My projects</h4>
     </div>
 
     <div class="card projectcard">
