--- a/index.html
+++ b/index.html
@@ -57,27 +57,36 @@
       </div>
     </div>
 
+    <div class="logo-div">
+      <img src="/images/logo.svg" alt="logo" class="logo" />
+    </div>
     <div>
       <h4 class="headerprojects">My projects</h4>
     </div>
+    <div class="logo-div">
+      <img src="/images/logo.svg" alt="logo" class="logo" />
+    </div>
 
-    <div class="card projectcard">
-      <img
-        src="/images/project1.jpg"
-        class="card-img-top projectimage"
-        alt="weather project"
-      />
-      <div class="card-body">
-        <h5 class="card-title">Weather project</h5>
-        <p class="card-text">
-          Some quick example text to build on the card title and make up the
-          bulk of the card's content.
-        </p>
-      </div>
+    <div class="row">
+      <div class="col-sm-6 mb-3 mb-sm-0">
+        <div class="card projectcard">
+          <img
+            src="/images/project1.jpg"
+            class="card-img-top projectimage"
+            alt="weather project"
+          />
+          <div class="card-body">
+            <h6 class="card-title">Weather project</h6>
+            <p class="card-text">
+              This project provides real time weather information about chosen
+              location, including the forecast for next three days.
+            </p>
+          </div>
 
-      <div class="card-body">
-        <a href="#" class="card-link">Card link</a>
-        <a href="#" class="card-link">Another link</a>
+          <div class="card-body link-div">
+            <a href="#" class="card-link project1-link">Link to this project</a>
+          </div>
+        </div>
       </div>
     </div>
   </body>
