--- a/work.html
+++ b/work.html
@@ -37,6 +37,53 @@
     />
   </head>
   <body>
-    <h3>Have a look at my previous projects</h3>
+    <div>
+      <h4 class="headerprojects2">Have a look at my previous projects</h4>
+      <div class="row">
+        <div class="col-sm-6 mb-3 mb-sm-0">
+          <div class="card projectcard">
+            <img
+              src="/images/project1.jpg"
+              class="card-img-top projectimage"
+              alt="weather project"
+            />
+            <div class="card-body">
+              <h6 class="card-title">Weather project</h6>
+              <p class="card-text">
+                This project provides real time weather information about chosen
+                location, including the forecast for next three days.
+              </p>
+            </div>
+            <div class="card-body link-div">
+              <a href="#" class="card-link project1-link"
+                >Link to this project</a
+              >
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-6 mb-3 mb-sm-0">
+          <div class="card projectcard">
+            <img
+              src="/images/project1.jpg"
+              class="card-img-top projectimage"
+              alt="weather project"
+            />
+            <div class="card-body">
+              <h6 class="card-title">Weather project</h6>
+              <p class="card-text">
+                This project provides real time weather information about chosen
+                location, including the forecast for next three days.
+              </p>
+            </div>
+            <div class="card-body link-div">
+              <a href="#" class="card-link project1-link"
+                >Link to this project</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
