--- a/about.html
+++ b/about.html
@@ -37,6 +37,16 @@
     />
   </head>
   <body>
+    <nav class="d-flex justify-content-between mb-5">
+      <img src="/images/logo.svg" class="logo_nav" alt="logo" />
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li class="active"><a href="/about.html">About</a></li>
+        <li><a href="/work.html">Work</a></li>
+        <li><a href="/contact.html">Contact</a></li>
+      </ul>
+    </nav>
+
     <div class="row">
       <div class="col-sm-6 aboutcard">
         <h5 class="card-title">Adela Javorska</h5>
