--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
     />
   </head>
   <body>
-    <nav class="d-flex justify-content-between mb-5">
+    <nav class="d-flex justify-content-between mb-3">
       <img src="/images/logo.svg" class="logo_nav" alt="logo" />
       <ul>
         <li><a href="/">Home</a></li>
@@ -71,5 +71,9 @@
         />
       </div>
     </div>
+
+    <footer>
+      <a href="mailto:adeljavorska@gmail.com">adeljavorska@gmail.com</a>
+    </footer>
   </body>
 </html>
