--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="A front-end developer Adela Javorska - homepage provides basic information about Adela and lists her previous projects."
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -37,6 +41,17 @@
     />
   </head>
   <body>
+    <nav class="d-flex justify-content-between mb-3">
+      <img src="/images/logo.svg" class="logo_nav" alt="Adela's logo" />
+      <ul>
+        <li class="active"><a href="/" title="Adela's homegape">Home</a></li>
+        <li>
+          <a href="/about.html" title="About Adela Page">About</a>
+        </li>
+        <li><a href="/work.html" title="Adela's Work">Work</a></li>
+        <li><a href="/contact.html" title="Adela's Contacts">Contact</a></li>
+      </ul>
+    </nav>
     <div class="card text-center mb-3 headercard">
       <div class="card-body">
         <h5 class="card-title">Adela Javorska</h5>
@@ -50,7 +65,11 @@
           class="happycoder"
           alt="happy coder"
         />
-        <a href="#" class="btn btn-primary button1">
+        <a
+          href="/contact.html"
+          class="btn btn-primary button1"
+          title="Write to Adela"
+        >
           <i class="fa-solid fa-pen-fancy fa-rotate-270 fa-fade"></i> Write me
           <i class="fa-solid fa-pen-fancy fa-fade"></i
         ></a>
@@ -77,12 +96,18 @@
             </p>
           </div>
           <div class="card-body link-div">
-            <a href="#" class="card-link project1-link">Link to this project</a>
+            <a
+              href="https://incomparable-toffee-75917e.netlify.app"
+              target="_blank"
+              class="card-link project1-link"
+              title="Link to Adela's projects"
+              >Link to this project</a
+            >
           </div>
         </div>
       </div>
 
-      <div class="col-sm-6 mb-3 mb-sm-0">
+      <div class="col-sm-6 mb-sm-0">
         <div class="card projectcard">
           <img
             src="/images/project1.jpg"
@@ -97,10 +122,21 @@
             </p>
           </div>
           <div class="card-body link-div">
-            <a href="#" class="card-link project1-link">Link to this project</a>
+            <a
+              href="https://incomparable-toffee-75917e.netlify.app"
+              target="_blank"
+              class="card-link project1-link"
+              title="Link to the Weather project"
+              >Link to this project</a
+            >
           </div>
         </div>
       </div>
     </div>
+    <footer>
+      <a href="mailto:adeljavorska@gmail.com" title="Adela's email"
+        >adeljavorska@gmail.com</a
+      >
+    </footer>
   </body>
 </html>
