link to github folder

--- a/index.html
+++ b/index.html
@@ -137,6 +137,12 @@
       <a href="mailto:adeljavorska@gmail.com" title="Adela's email"
         >adeljavorska@gmail.com</a
       >
+      <a
+        href="https://github.com/AdelJav/Resp_W4"
+        target="_blank"
+        title="Github link"
+        >This is an open source project, available in Github.</a
+      >
     </footer>
   </body>
 </html>
