--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
       </ul>
     </nav>
 
-    <div class="row">
+    <div class="row justify-content-center">
       <div class="col-sm-6 aboutcard">
         <h5 class="card-title">Adela Javorska</h5>
         <img src="/images/logo.svg" alt="Adela's logo" class="logo_about" />
