--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
       </ul>
     </nav>
 
-    <div class="card text-center headercard">
+    <div class="card text-center headercard contactcard">
       <div class="card-body">
         <h5 class="card-title">Let's get in touch</h5>
         <img src="/images/logo.svg" alt="Adela's logo" class="logo" />
